<resources>
    <string name="app_name">MyCalculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_division">/</string>
    <string name="key_multiplication">*</string>
    <string name="key_minus">_</string>
    <string name="key_plus">+</string>
    <string name="key_equal">=</string>
    <string name="key1">Theme_1</string>
    <string name="key2">Theme_2</string>
    <string name="key3">Calculator</string>
    <string name="key_theme">theme</string>
</resources>